# Unsupervised-Moving-Point-Detection

./: .gitignore  CMakeLists.txt  DEVELOPER.md  LICENSE.md  README.md  README_BACKUP.md  approach.md  dyn_obj_filter.cpp  env.md  howto_config_clang.md  new_plan.md  other_notes.md  refactor_after_appearcheck.md  repo_handler.py  test_bindings.py  test_filter.py  visualize_filter.ipynb
m_detector_python/: anal_prof.py  analyze_study.py  best_params_from_study.yaml  best_params_optuna_bi1.yaml  best_params_optuna_full_3.yaml  best_tuning.yaml  code_old.txt  commands.txt  config_best_trial.yaml  debug_frames.ipynb  discussion_prelabeling.md  env_creation.md  env_creation_and_commands.md  environment.yml  full_detailed_log.txt  interp_run.out  mdetector_profile.prof  multiproc.out  nohup.out  notebook_helpers.py  optuna_bi1.db  optuna_debug.db  optuna_debug_2.db  optuna_full.db  optuna_full_2.db  optuna_iou_v1.db  profile_detailed.txt  pyproject.toml  refactor_ideas.md  refactor_plan.md  repo_handler.py  repo_summarizer.py  repo_summary.txt  run23.out  run_adapt.out  runeps05.out  structure.txt  summarizer_config.yaml  summary.txt  undebug.out  (+1 more)
m_detector_python/backup/: profile_script.py  run_ray_experiment.py  tuning_manager.py
m_detector_python/backup/visualization/: animation_helpers.py  debug_animation_helpers.py  frame_composers.py  k3d_visualizer.py  plot_primitives.py  video_generator.py  video_helpers.py  visualization_utils.py
m_detector_python/config/: m_detector_config.yaml  m_detector_config_refined.yaml
m_detector_python/labels/: gt_sparse_labels_scene-0061_v1.0.pt  gt_sparse_labels_scene-0103_v1.0.pt  gt_sparse_labels_scene-0553_v1.0.pt  gt_sparse_labels_scene-0655_v1.0.pt  gt_sparse_labels_scene-0757_v1.0.pt  gt_sparse_labels_scene-0796_v1.0.pt  gt_sparse_labels_scene-0916_v1.0.pt  gt_sparse_labels_scene-1077_v1.0.pt  gt_sparse_labels_scene-1094_v1.0.pt  gt_sparse_labels_scene-1100_v1.0.pt
m_detector_python/logs/: worker_profile_0.prof  worker_profile_1.prof  worker_profile_2.prof  worker_profile_3.prof  worker_profile_4.prof
m_detector_python/notebooks/: Calculate_And_Compare_Metrics.ipynb  debugging_galore 2.html  debugging_galore 2.ipynb  debugging_galore.ipynb  debugging_map_check.ipynb  exploration 2.ipynb  exploration.ipynb  exploration_3.ipynb  interp_investigation.ipynb  nuscenes_video.ipynb  profile_results.txt  ransac_viz.ipynb  validate_formats.ipynb  validation.ipynb  validation2.ipynb  validation4.ipynb  validation5.ipynb
m_detector_python/notebooks/utils/: data_processing.py  debug.py  interpolation.py  nuscenes_utils.py  refactor.py  refactor.py.bak  visualization.py
m_detector_python/optuna_studies/: optuna_bi1.db  optuna_full_3.db
m_detector_python/output/BIG_RUN_LESS_LESS_DATA/AdapMCCB_Single_dmax_0p8/: config_tuned_AdapMCCB_Single_dmax_0p8.yaml  mdet_results_AdapMCCB_Single_dmax_0p8_scene_0.pt  mdet_results_AdapMCCB_Single_dmax_0p8_scene_1.pt  mdet_results_AdapMCCB_Single_dmax_0p8_scene_3.pt  mdet_results_AdapMCCB_Single_dmax_0p8_scene_5.pt  mdet_results_AdapMCCB_Single_dmax_0p8_scene_6.pt  mdet_results_AdapMCCB_Single_dmax_0p8_scene_7.pt
m_detector_python/output/BIG_RUN_LESS_LESS_DATA/AdapMCCB_Single_dmin_0p06/: config_tuned_AdapMCCB_Single_dmin_0p06.yaml  mdet_results_AdapMCCB_Single_dmin_0p06_scene_1.pt  mdet_results_AdapMCCB_Single_dmin_0p06_scene_4.pt  mdet_results_AdapMCCB_Single_dmin_0p06_scene_5.pt  mdet_results_AdapMCCB_Single_dmin_0p06_scene_7.pt  mdet_results_AdapMCCB_Single_dmin_0p06_scene_9.pt
m_detector_python/output/BIG_RUN_LESS_LESS_DATA/AdapMCCB_Single_dthr_18p0/: config_tuned_AdapMCCB_Single_dthr_18p0.yaml  mdet_results_AdapMCCB_Single_dthr_18p0_scene_1.pt  mdet_results_AdapMCCB_Single_dthr_18p0_scene_2.pt  mdet_results_AdapMCCB_Single_dthr_18p0_scene_4.pt  mdet_results_AdapMCCB_Single_dthr_18p0_scene_6.pt  mdet_results_AdapMCCB_Single_dthr_18p0_scene_8.pt
m_detector_python/profiles/: trial_0.prof  trial_1.prof  trial_10.prof  trial_100.prof  trial_101.prof  trial_102.prof  trial_103.prof  trial_104.prof  trial_105.prof  trial_106.prof  trial_107.prof  trial_108.prof  trial_109.prof  trial_11.prof  trial_110.prof  trial_111.prof  trial_112.prof  trial_113.prof  trial_114.prof  trial_115.prof  trial_116.prof  trial_117.prof  trial_118.prof  trial_119.prof  trial_12.prof  trial_120.prof  trial_121.prof  trial_122.prof  trial_123.prof  trial_124.prof  trial_125.prof  trial_126.prof  trial_127.prof  trial_128.prof  trial_129.prof  trial_13.prof  trial_130.prof  trial_131.prof  trial_132.prof  trial_133.prof  (+468 more)
m_detector_python/scripts/: anal_prof.py  analyze_errors_interactive.py  analyze_worker_profile.py  export_best_params.py  generate_labels.py  generate_mdetector_bev_video.py  generate_video.py  mdetector_profile.prof  process_scene.py  profile_script.py  ray_actors.py  run_experiment.py  run_mdetector_and_save.py  run_ray_experiment.py  tuning_manager.py  ui_listener.py  visualize_gt.py  visualize_mdetector.py
m_detector_python/src/: config_loader.py  main_runner.py
m_detector_python/src/core/: __init__.py  constants.py  debug_collector.py  debug_collector.py.bak  depth_image.py  depth_image_legacy.py  depth_image_library.py  m_detector.py
m_detector_python/src/data_utils/: label_generation.py  label_generation.py.bak  nuscenes_helper.py  seeding_utils.py  validation_utils_torch.py
m_detector_python/src/ray_scripts/: analyze_study.py  extract_best_trial.py  ray_actors copy.py.bak  ray_actors.py  run_experiment.py  run_optuna_experiment.py  shared_utils.py  tuning_manager.py
m_detector_python/src/tuning/: analyze_study.py  ray_actors.py  shared_utils.py  tuning_manager.py
m_detector_python/src/utils/: debug_helpers.py  label_generation.py  notebook_helpers.py  point_cloud_utils.py  profiling.py  transformations.py  validation_utils.py  visualization.py  visualize_detector.py
m_detector_python/src/visualization/: animation_helpers.py  debug_animation_helpers.py  frame_composers.py  k3d_visualizer.py  metrics_plots.py  plot_primitives.py  video_generator.py  video_helpers.py
(+2057 files in other folders)
